# GLMediaKit

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/glmediakit/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  EGLJNIBridge.cpp  JNIHelper.cpp  JNIHelper.h  JNIPlayer.cpp  MediaJNIBridge.cpp
app/src/main/cpp/include/: MediaManager.h  Player.h  RenderThread.h  SLAudioPlayer.h  TextureManger.h
app/src/main/cpp/include/Decoder/: FFMpegAudioDecoder.h  FFmpegAudioDecoder.h  FFmpegVideoDecoder.h  IDecoder.h  IVideoDecoder.h  MediaCodecDecoderWrapper.h  MediaCodecVideoDecoder.h
app/src/main/cpp/include/Demuxer/: FFmpegDemuxer.h
app/src/main/cpp/include/EGL/: EGLCore.h  EGLManager.h
app/src/main/cpp/include/Reader/: FFMpegVideoReader.h  FFmpegAudioReader.h  FFmpegReader.h
app/src/main/cpp/include/Renderer/: GLRenderer.h  IRenderer.h  ImageRenderer.h  OffscreenRenderer.h  ShaderManager.h  VideoRenderer.h
app/src/main/cpp/include/Renderer/Geometry/: Geometry.h  MovingTriangle.h  RotatingTriangle.h  Square.h  Triangle.h
app/src/main/cpp/include/core/: IClock.h  MediaSynchronizer.hpp  PerformceTimer.h  PerformceTimer.hpp  SafeQueue.hpp
app/src/main/cpp/include/interface/: IDecoder.h  IMediaData.h  IRenderer.h
app/src/main/cpp/include/io/: FFmpegFrame.hpp  FFmpegPacket.hpp  MediaCodecFrame.hpp
app/src/main/cpp/src/: MediaManager.cpp  Player.cpp  RenderThread.cpp  SLAudioPlayer.cpp  TextureManger.cpp
app/src/main/cpp/src/Decoder/: FFMpegAudioDecoder.cpp  FFmpegAudioDecoder.cpp  FFmpegVideoDecoder.cpp  MediaCodecDecoderWrapper.cpp  MediaCodecVideoDecoder.cpp
app/src/main/cpp/src/Demuxer/: FFmpegDemuxer.cpp
app/src/main/cpp/src/EGL/: EGLCore.cpp  EGLManager.cpp
app/src/main/cpp/src/Reader/: FFMpegVideoReader.cpp  FFmpegAudioReader.cpp  FFmpegReader.cpp
app/src/main/cpp/src/Renderer/: GLRenderer.cpp  ImageRenderer.cpp  OffscreenRenderer.cpp  ShaderManager.cpp  VideoRenderer.cpp
app/src/main/cpp/src/Renderer/Geometry/: Geometry.cpp  MovingTriangle.cpp  RotatingTriangle.cpp  Square.cpp  Triangle.cpp
app/src/main/java/com/example/glmediakit/: EGLSurfaceView.java  MainActivity.kt  MediaSurfaceView.java  Player.java  SurfaceListener.java
app/src/main/java/com/example/glmediakit/decoder/: DecodedFrame.java  MediaCodecDecoder.java
app/src/main/java/com/example/learnopengles/: EGLSurfaceView.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/glmediakit/: ExampleUnitTest.kt
doc/: 项目结构.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
